# GenAI_Math

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Load_dataset.ipynb  Load_dataset_model.ipynb  NumiNaMath_Eval.ipynb  NumiNaMath_Eval_with_API_LLM.ipynb  NumiNaMath_Eval_with_SFT_model.ipynb  NumiNaMath_Preprocess_for_SFT.ipynb  NumiNaMath_Train_with_SFT_processed.ipynb
scripts/: train_numinamath_sft.py
