[project]
name = "genai-math"
version = "0.1.0"
description = "Teaching LLMs to do math in various ways"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "trackio>=0.25.1",
    "transformers[sentencepiece]>=5.6.2",
    "trl>=1.3.0",
]
